--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.projectVersion=1.0
 sonar.host.url=http://localhost:9000
 
 # Répertoires à analyser
-sonar.sources=client,server
+sonar.sources=src
 sonar.exclusions=**/node_modules/**, **/build/**, **/dist/**, **/*.test.js, **/__tests__/**
 
 # Langage et encodage
