--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,8 @@ sonar.projectName=sonarqube
 sonar.projectVersion=1.0
 
 # Connexion à SonarQube
-sonar.host.url=http://host.docker.internal:9000
+sonar.host.url=http://192.168.1.26:9000
+
 
 
 # Répertoires à analyser
